# School-Scraper-Leader

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.bat  setup.bat
lib/: models.py  parse.py  school_data.py  scraper.py  utils.py
output/: school_data_summary.md
output/parsed_data/: Brent_International_School_parsed.json  Chinese_International_School_Manila_parsed.json  Faith_Academy_parsed.json  German_European_School_Manila_(GESM)_parsed.json  International_School_Manila_parsed.json  Reedley_International_School_parsed.json  Singapore_School_Manila_parsed.json  Southville_International_School_and_Colleges_parsed.json
output/raw_data/: Brent_International_School_raw.txt  Chinese_International_School_Manila_raw.txt  Faith_Academy_raw.txt  German_European_School_Manila_(GESM)_raw.txt  International_School_Manila_raw.txt  Reedley_International_School_raw.txt  Singapore_School_Manila_raw.txt  Southville_International_School_and_Colleges_raw.txt
services/: playwright_manager.py  session_manager.py
